Buttons Bar: Fix overflow issue of Sidebar button

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -169,6 +169,11 @@ input {
   display: flex;
   flex-grow: 1;
   justify-content: space-between;
+
+  // Workaround for buttons bar overflow issues.
+  a {
+    overflow: inherit;
+  }
 }
 
 //
